--- a/templates/onboarding.html
+++ b/templates/onboarding.html
@@ -112,8 +112,7 @@
 <body>
   <!-- Fixed Header Section -->
   <div class="header">
-    <img src="https://www.google.com/
-    https://www.umass.edu/sites/default/files/2023-03/UMass_Seal_Medium_PMS_202_0.png" alt="UMass Logo">
+    <img src="https://www.umass.edu/sites/default/files/2023-03/UMass_Seal_Medium_PMS_202_0.png" alt="UMass Logo">
     <h1>University of Massachusetts Amherst</h1>
   </div>
 
